# pharmacy_web

./: .env  .gitignore  Cargo.toml  README.md  pharmacy.db  setup.sql
src/: main.rs
src/db/: mod.rs
src/models/: medicine.rs
src/routes/: medicines.rs
templates/: medicines.html
