[package]
name = "rust"
version = "0.1.0"
edition = "2024"

[dependencies]
askama = "0.14.0"
dotenvy = "0.15.7"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.142"
sqlx = { version = "0.8.6", features = ["sqlite", "runtime-tokio-rustls", "macros"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
